--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Thu Jun 08 2023 11:20:59 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Fri Jun 16 2023 12:59:10 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="6475428339f277007afc47f0" data-wf-site="6475428339f277007afc4798">
 <head>
   <meta charset="utf-8">
@@ -11,7 +11,7 @@
   <link href="../static/css/indigofloyds-soybean-website.webflow.css" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin="anonymous">
-  <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
+  <script src="../static/js/webfont.js" type="text/javascript"></script>
   <script type="text/javascript">WebFont.load({  google: {    families: ["Open Sans:300,300italic,400,400italic,600,600italic,700,700italic,800,800italic","PT Serif:400,400italic,700,700italic","Roboto:300,regular,500"]  }});</script>
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="../static/images/favicon.ico" rel="shortcut icon" type="image/x-icon">
@@ -20,7 +20,7 @@
 <body>
   <div data-collapse="medium" data-animation="default" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navigation-bar w-nav">
     <div class="w-container">
-      <a href="/" class="brand-link w-nav-brand"><img src="../static/images/logo2.jpg" loading="lazy" width="50" sizes="50px" srcset="../static/images/logo2-p-500.jpg 500w, ../static/images/logo2-p-800.jpg 800w, ../static/images/logo2-p-1080.jpg 1080w, ../static/images/logo2-p-1600.jpg 1600w, ../static/images/logo2.jpg 1683w" alt="" class="image-3">
+      <a href="/" class="brand-link w-nav-brand"><img src="../static/images/logo2.jpg" loading="lazy" width="50" sizes="49.9921875px" srcset="../static/images/logo2-p-500.jpg 500w, ../static/images/logo2-p-800.jpg 800w, ../static/images/logo2-p-1080.jpg 1080w, ../static/images/logo2-p-1600.jpg 1600w, ../static/images/logo2.jpg 1683w" alt="" class="image-3">
         <h1 class="brand-text">soyDNGP<br></h1>
       </a>
       <nav role="navigation" class="navigation-menu w-nav-menu">
@@ -40,7 +40,7 @@
       </div>
       <p class="paragraph-4">    We highly value your thoughts, questions, and feedback. If you need assistance navigating our webserver, require more information about SoyDNGP, or wish to share your insights and experiences, please don&#x27;t hesitate to get in touch.For general inquiries, you can<strong> reach out to us</strong> at <strong>wangxt881@gmail.com</strong>. <br>    For technical support or assistance with the prediction models, please contact our dedicated <strong>support team</strong> at <strong>1798354140@qq.com</strong>.We strive to respond to all inquiries as promptly as possible. <br>    Additionally, you are encouraged to consult our Frequently Asked Questions (FAQ) section for quick answers to common questions about SoyDNGP. We look forward to hearing from you and assisting you with your research endeavors!</p>
       <div class="form-wrapper w-form">
-        <form id="email-form" name="email-form" data-name="Email Form" action="/send" method="post" class="form"><input type="text" class="form-field w-input" maxlength="256" name="Name" data-name="Name" placeholder="Enter your name..." id="Name" required=""><input type="email" class="form-field w-input" maxlength="256" name="Email" data-name="Email" placeholder="Enter your email..." id="Email" required=""><textarea id="field-2" name="field-2" maxlength="5000" data-name="Field 2" placeholder="Message" class="form-field text-area w-input"></textarea><input type="submit" value="Send Carrier Pigeon" data-wait="Please wait..." class="button full-width w-button"></form>
+        <form id="email-form" name="email-form" data-name="Email Form" action="/send" method="post" class="form" data-wf-page-id="6475428339f277007afc47f0" data-wf-element-id="27936258-2043-8d11-eaa1-4a3d223fe288"><input type="text" class="form-field w-input" maxlength="256" name="Name" data-name="Name" placeholder="Enter your name..." id="Name" required=""><input type="email" class="form-field w-input" maxlength="256" name="Email" data-name="Email" placeholder="Enter your email..." id="Email" required=""><textarea id="field-2" name="field-2" maxlength="5000" data-name="Field 2" placeholder="Message" class="form-field text-area w-input"></textarea><input type="submit" value="Send Carrier Pigeon" data-wait="Please wait..." class="button full-width w-button"></form>
         <div class="w-form-done">
           <p>Thank you! Your submission has been received!</p>
         </div>
@@ -61,6 +61,7 @@
           <h5>useful links</h5>
           <a href="https://www.soybase.org/snps/" class="footer-link">the SoyBase SNP page</a>
           <a href="https://npgsweb.ars-grin.gov/gringlobal/descriptors" class="footer-link">GRIN-Global website</a>
+          <a href="https://www.biorxiv.org/content/10.1101/2023.06.15.545107v1" class="footer-link">Our article</a>
           <div class="footer-link-wrapper w-clearfix"><img src="../static/images/social-33.svg" width="20" alt="" class="info-icon">
             <a href="https://github.com/IndigoFloyd/SoybeanWebsite" class="footer-link with-icon">GitHub</a>
           </div>
