--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Thu Jun 08 2023 11:20:59 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Fri Jun 16 2023 12:59:10 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="6475428339f277007afc47ed" data-wf-site="6475428339f277007afc4798">
 <head>
   <meta charset="utf-8">
@@ -11,7 +11,7 @@
   <link href="../static/css/indigofloyds-soybean-website.webflow.css" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin="anonymous">
-  <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
+  <script src="../static/js/webfont.js" type="text/javascript"></script>
   <script type="text/javascript">WebFont.load({  google: {    families: ["Open Sans:300,300italic,400,400italic,600,600italic,700,700italic,800,800italic","PT Serif:400,400italic,700,700italic","Roboto:300,regular,500"]  }});</script>
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="../static/images/favicon.ico" rel="shortcut icon" type="image/x-icon">
@@ -20,7 +20,7 @@
 <body class="body">
   <div data-collapse="medium" data-animation="default" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navigation-bar w-nav">
     <div class="w-container">
-      <a href="/" aria-current="page" class="brand-link w-nav-brand w--current"><img src="../static/images/logo2.jpg" loading="lazy" width="50" sizes="50px" srcset="../static/images/logo2-p-500.jpg 500w, ../static/images/logo2-p-800.jpg 800w, ../static/images/logo2-p-1080.jpg 1080w, ../static/images/logo2-p-1600.jpg 1600w, ../static/images/logo2.jpg 1683w" alt="" class="image-3">
+      <a href="/" aria-current="page" class="brand-link w-nav-brand w--current"><img src="../static/images/logo2.jpg" loading="lazy" width="50" sizes="49.9921875px" srcset="../static/images/logo2-p-500.jpg 500w, ../static/images/logo2-p-800.jpg 800w, ../static/images/logo2-p-1080.jpg 1080w, ../static/images/logo2-p-1600.jpg 1600w, ../static/images/logo2.jpg 1683w" alt="" class="image-3">
         <h1 class="brand-text">soyDNGP<br></h1>
       </a>
       <nav role="navigation" class="navigation-menu w-nav-menu">
@@ -76,14 +76,14 @@
       </div>
       <div class="w-row">
         <div class="w-col w-col-6">
-          <div class="white-box transparent"><img src="../static/images/微信图片_20230601092353.png" sizes="(max-width: 479px) 85vw, (max-width: 767px) 88vw, (max-width: 991px) 43vw, 430px" srcset="../static/images/微信图片_20230601092353-p-500.png 500w, ../static/images/微信图片_20230601092353-p-800.png 800w, ../static/images/微信图片_20230601092353-p-1080.png 1080w, ../static/images/微信图片_20230601092353-p-1600.png 1600w, ../static/images/微信图片_20230601092353.png 1620w" alt="" class="fullwidth-image">
+          <div class="white-box transparent"><img src="../static/images/微信图片_20230601092353.png" sizes="(max-width: 479px) 85vw, (max-width: 767px) 88vw, (max-width: 991px) 323.99737548828125px, 430px" srcset="../static/images/微信图片_20230601092353-p-500.png 500w, ../static/images/微信图片_20230601092353-p-800.png 800w, ../static/images/微信图片_20230601092353-p-1080.png 1080w, ../static/images/微信图片_20230601092353-p-1600.png 1600w, ../static/images/微信图片_20230601092353.png 1620w" alt="" class="fullwidth-image">
             <h3 class="white-text">Traits lookup</h3>
             <p class="white-text">Here, users can input the taxon name - either the PI number or the traditional name - to check if the respective record is already included in our database. Our database incorporates a diverse array of traits, both qualitative and quantitative.</p>
             <a href="/Search" class="hollow-button">try now</a>
           </div>
         </div>
         <div class="w-col w-col-6">
-          <div class="white-box transparent"><img src="../static/images/微信图片_20230601091751.png" sizes="(max-width: 479px) 85vw, (max-width: 767px) 88vw, (max-width: 991px) 43vw, 430px" srcset="../static/images/微信图片_20230601091751-p-500.png 500w, ../static/images/微信图片_20230601091751-p-800.png 800w, ../static/images/微信图片_20230601091751-p-1080.png 1080w, ../static/images/微信图片_20230601091751-p-1600.png 1600w, ../static/images/微信图片_20230601091751.png 1620w" alt="" class="fullwidth-image">
+          <div class="white-box transparent"><img src="../static/images/微信图片_20230601091751.png" sizes="(max-width: 479px) 85vw, (max-width: 767px) 88vw, (max-width: 991px) 323.99737548828125px, 430px" srcset="../static/images/微信图片_20230601091751-p-500.png 500w, ../static/images/微信图片_20230601091751-p-800.png 800w, ../static/images/微信图片_20230601091751-p-1080.png 1080w, ../static/images/微信图片_20230601091751-p-1600.png 1600w, ../static/images/微信图片_20230601091751.png 1620w" alt="" class="fullwidth-image">
             <h3 class="white-text">Traits Prediction</h3>
             <p class="white-text">Here, users can upload a VCF file, which our robust models will then use to predict trait values. This tool uses the state-of-art neural network models that we have meticulously trained and fine-tuned, ensuring accurate and reliable predictions.</p>
             <a href="/UploadData" class="hollow-button all-caps">try now</a>
@@ -103,6 +103,7 @@
           <h5>useful links</h5>
           <a href="https://www.soybase.org/snps/" class="footer-link">the SoyBase SNP page</a>
           <a href="https://npgsweb.ars-grin.gov/gringlobal/descriptors" class="footer-link">GRIN-Global website</a>
+          <a href="https://www.biorxiv.org/content/10.1101/2023.06.15.545107v1" class="footer-link">Our article</a>
           <div class="footer-link-wrapper w-clearfix"><img src="../static/images/social-33.svg" width="20" alt="" class="info-icon">
             <a href="https://github.com/IndigoFloyd/SoybeanWebsite" class="footer-link with-icon">GitHub</a>
           </div>
@@ -112,7 +113,7 @@
   </div>
   <div class="footer center footer2 wf-section">
     <div class="w-container">
-      <div class="footer-text">CopyRight © 2020 ~ 2021 National Key Laboratory of Crop Genetic Improvement, Huazhong Agricultural University<br></div><img src="../static/images/-nre42yj30rlfcjd7-001.png" loading="lazy" width="100" sizes="100px" srcset="../static/images/-nre42yj30rlfcjd7-001-p-500.png 500w, ../static/images/-nre42yj30rlfcjd7-001.png 770w" alt="" class="image">
+      <div class="footer-text">CopyRight © 2020 ~ 2021 National Key Laboratory of Crop Genetic Improvement, Huazhong Agricultural University<br></div><img src="../static/images/-nre42yj30rlfcjd7-001.png" loading="lazy" width="100" sizes="99.99609375px" srcset="../static/images/-nre42yj30rlfcjd7-001-p-500.png 500w, ../static/images/-nre42yj30rlfcjd7-001.png 770w" alt="" class="image">
     </div>
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=6475428339f277007afc4798" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
