--- a/templates/learnmore.html
+++ b/templates/learnmore.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Thu Jun 08 2023 11:20:59 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Fri Jun 16 2023 12:59:10 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="648199cded10f43c887cdcd5" data-wf-site="6475428339f277007afc4798">
 <head>
   <meta charset="utf-8">
@@ -13,7 +13,7 @@
   <link href="../static/css/indigofloyds-soybean-website.webflow.css" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin="anonymous">
-  <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
+  <script src="../static/js/webfont.js" type="text/javascript"></script>
   <script type="text/javascript">WebFont.load({  google: {    families: ["Open Sans:300,300italic,400,400italic,600,600italic,700,700italic,800,800italic","PT Serif:400,400italic,700,700italic","Roboto:300,regular,500"]  }});</script>
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="../static/images/favicon.ico" rel="shortcut icon" type="image/x-icon">
@@ -22,7 +22,7 @@
 <body>
   <div data-collapse="medium" data-animation="default" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navigation-bar w-nav">
     <div class="w-container">
-      <a href="/" class="brand-link w-nav-brand"><img src="../static/images/logo2.jpg" loading="lazy" width="50" sizes="50px" srcset="../static/images/logo2-p-500.jpg 500w, ../static/images/logo2-p-800.jpg 800w, ../static/images/logo2-p-1080.jpg 1080w, ../static/images/logo2-p-1600.jpg 1600w, ../static/images/logo2.jpg 1683w" alt="" class="image-3">
+      <a href="index.html" class="brand-link w-nav-brand"><img src="../static/images/logo2.jpg" loading="lazy" width="50" sizes="49.9921875px" srcset="../static/images/logo2-p-500.jpg 500w, ../static/images/logo2-p-800.jpg 800w, ../static/images/logo2-p-1080.jpg 1080w, ../static/images/logo2-p-1600.jpg 1600w, ../static/images/logo2.jpg 1683w" alt="" class="image-3">
         <h1 class="brand-text">soyDNGP<br></h1>
       </a>
       <nav role="navigation" class="navigation-menu w-nav-menu">
@@ -41,24 +41,26 @@
         <h2 class="section-heading centered">Learn more about us</h2>
         <div class="section-subheading center">here are more details of our project</div>
       </div>
-      <div data-duration-in="300" data-duration-out="100" data-current="Tab 2" data-easing="ease" class="tabs-wrapper w-tabs">
+      <div data-duration-in="300" data-duration-out="100" data-current="Tab 1" data-easing="ease" class="tabs-wrapper w-tabs">
         <div class="tab-menu w-tab-menu">
-          <a data-w-tab="Tab 1" class="button tab w-inline-block w-tab-link">
+          <a data-w-tab="Tab 1" class="button tab w-inline-block w-tab-link w--current">
             <div>SoyDNGP User Manual &amp; Tips</div>
           </a>
-          <a data-w-tab="Tab 2" class="button tab w-inline-block w-tab-link w--current">
+          <a data-w-tab="Tab 2" class="button tab w-inline-block w-tab-link">
             <div>models structure</div>
           </a>
         </div>
         <div class="w-tab-content">
-          <div data-w-tab="Tab 1" class="w-tab-pane">
+          <div data-w-tab="Tab 1" class="w-tab-pane w--tab-active">
             <div class="div-block-2">
               <h2 class="heading-3">SoyDNGP User Manual &amp; Tips</h2>
               <p class="learnmoretext">Welcome to SoyDNGP, our webserver powered by convolutional neural network-based algorithms. This platform was developed through the meticulous analysis of genotypes and phenotypes from 5,000 randomly selected soybean accessions.<br>The genotype data were sourced and filtered using the SoySNP50K chip available on the SoyBase webserver. For more details on this, please visit the SoyBase SNP page here. The phenotypes for the 11 agronomy traits were downloaded from the GRIN-Global website.<br><strong><br>If you&#x27;re a first-time user of our prediction function, please take note of the following important tips:<br><br>Compatibility: </strong>To accommodate a broad spectrum of soybean genotypes, our modules were trained using a carefully selected set of 34,624 SNPs, based on the overlap of the SoySNP50K chip and resequencing data of soybean. These SNPs are built into our webserver and automatically selected when you submit your VCF files. Missing loci are filled using the reference base, which in our case is version 2 of the Williams 82 genome. Please note that if your reference is a different soybean genome version (like version 4), you&#x27;ll need to convert it to version 2 to ensure accurate and reliable results.<br><strong><br>Missing Data:</strong> If you&#x27;re submitting a large number of samples (in the hundreds) for phenotype prediction, we recommend using Beagle software to phase your VCF file first. This will help you to capture as many valid SNPs as possible.<br><strong><br>Large-scale Predictions:</strong> If you have thousands of soybean samples and wish to conduct local predictions, we&#x27;ve got you covered! We offer open-source code and pre-trained modules for local usage. Should you encounter any issues or questions, our dedicated team is ready and eager to assist.<br><strong><br>File Submissions:</strong> Our server is smart! If you submit the same file within the same day, it will recognize it as a duplicate, saving you the hassle of re-submitting.We hope you enjoy your journey with SoyDNGP, and look forward to joining you in unearthing the hidden secrets of soybean genetics.</p>
             </div>
           </div>
-          <div data-w-tab="Tab 2" class="w-tab-pane w--tab-active">
-            <div><img sizes="(max-width: 479px) 96vw, (max-width: 767px) 97vw, 647.001953125px" srcset="../static/images/屏幕截图-2023-06-08-172130-p-500.png 500w, ../static/images/屏幕截图-2023-06-08-172130.png 647w" src="../static/images/屏幕截图-2023-06-08-172130.png" loading="lazy" alt=""></div>
+          <div data-w-tab="Tab 2" class="w-tab-pane">
+            <div><img loading="lazy" src="../static/images/graphic_summary.svg" alt="">
+              <p class="learnmoretext">Soybean is a globally significant crop, playing a vital role in human nutrition and agriculture. Its complex genetic structure and wide trait variation, however, pose challenges for breeders and researchers aiming to optimize its yield and quality. Addressing this biological complexity requires innovative and accurate tools for trait prediction. In response to this challenge, we have developed SoyDNGP, a Convolutional Neural Networks (CNN)-based model that offers significant advancements in the field of soybean trait prediction. Compared to existing methods, such as DeepGS and DNNGP, SoyDNGP boasts a distinct advantage due to its lower parameter volume and superior predictive accuracy. Through rigorous performance comparison, including prediction accuracy and model complexity, SoyDNGP consistently outperformed its counterparts. Furthermore, it effectively predicted complex traits with remarkable precision, demonstrating robust performance across different sample sizes and trait complexities. We also tested the versatility of SoyDNGP across multiple crop species, including Cotton, Maize, Rice, and Tomato. Our results showed its consistent and comparable performance, emphasizing SoyDNGP&#x27;s potential as a versatile tool for genomic prediction across a broad range of crops. To enhance its accessibility to users without extensive programming experience, we have designed a user-friendly web server, available at http://xtlab.hzau.edu.cn/SoyDNGP. The server provides two primary features: &#x27;Trait Lookup&#x27;, offering users the ability to access pre-existing trait predictions for over 500 soybean accessions, and &#x27;Trait Prediction&#x27;, allowing for the upload of VCF files for trait estimation. By providing a high-performing, accessible tool for trait prediction and genomic analysis, SoyDNGP opens up new possibilities in the quest for efficient and optimized soybean breeding.</p>
+            </div>
           </div>
         </div>
       </div>
@@ -75,6 +77,7 @@
           <h5>useful links</h5>
           <a href="https://www.soybase.org/snps/" class="footer-link">the SoyBase SNP page</a>
           <a href="https://npgsweb.ars-grin.gov/gringlobal/descriptors" class="footer-link">GRIN-Global website</a>
+          <a href="https://www.biorxiv.org/content/10.1101/2023.06.15.545107v1" class="footer-link">Our article</a>
           <div class="footer-link-wrapper w-clearfix"><img src="../static/images/social-33.svg" width="20" alt="" class="info-icon">
             <a href="https://github.com/IndigoFloyd/SoybeanWebsite" class="footer-link with-icon">GitHub</a>
           </div>
@@ -84,7 +87,7 @@
   </div>
   <div class="footer center footer2 wf-section">
     <div class="w-container">
-      <div class="footer-text">CopyRight © 2020 ~ 2021 National Key Laboratory of Crop Genetic Improvement, Huazhong Agricultural University<br></div><img src="../static/images/-nre42yj30rlfcjd7-001.png" loading="lazy" width="100" sizes="100px" srcset="../static/images/-nre42yj30rlfcjd7-001-p-500.png 500w, ../static/images/-nre42yj30rlfcjd7-001.png 770w" alt="" class="image">
+      <div class="footer-text">CopyRight © 2020 ~ 2021 National Key Laboratory of Crop Genetic Improvement, Huazhong Agricultural University<br></div><img src="../static/images/-nre42yj30rlfcjd7-001.png" loading="lazy" width="100" sizes="99.99609375px" srcset="../static/images/-nre42yj30rlfcjd7-001-p-500.png 500w, ../static/images/-nre42yj30rlfcjd7-001.png 770w" alt="" class="image">
     </div>
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=6475428339f277007afc4798" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
