--- a/templates/predict.html
+++ b/templates/predict.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Thu Jun 08 2023 11:20:59 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Fri Jun 16 2023 12:59:10 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="6481afe560ae807f1d6cf125" data-wf-site="6475428339f277007afc4798">
 
 <head>
@@ -14,7 +14,7 @@
   <link href="../static/css/indigofloyds-soybean-website.webflow.css" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin="anonymous">
-  <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
+  <script src="../static/js/webfont.js" type="text/javascript"></script>
   <script
     type="text/javascript">WebFont.load({ google: { families: ["Open Sans:300,300italic,400,400italic,600,600italic,700,700italic,800,800italic", "PT Serif:400,400italic,700,700italic", "Roboto:300,regular,500"] } });</script>
   <script
@@ -43,7 +43,7 @@
     role="banner" class="navigation-bar w-nav">
     <div class="w-container">
       <a href="/" class="brand-link w-nav-brand"><img src="../static/images/logo2.jpg" loading="lazy" width="50"
-          sizes="50px"
+          sizes="49.9921875px"
           srcset="../static/images/logo2-p-500.jpg 500w, ../static/images/logo2-p-800.jpg 800w, ../static/images/logo2-p-1080.jpg 1080w, ../static/images/logo2-p-1600.jpg 1600w, ../static/images/logo2.jpg 1683w"
           alt="" class="image-3">
         <h1 class="brand-text">soyDNGP<br></h1>
@@ -373,8 +373,6 @@
       progressBar.innerHTML = data.title;  // 更新进度条的标题
     }
   </script>
-
-
   <div class="footer wf-section">
     <div class="w-container">
       <div class="w-row">
@@ -388,6 +386,7 @@
           <h5>useful links</h5>
           <a href="https://www.soybase.org/snps/" class="footer-link">the SoyBase SNP page</a>
           <a href="https://npgsweb.ars-grin.gov/gringlobal/descriptors" class="footer-link">GRIN-Global website</a>
+          <a href="https://www.biorxiv.org/content/10.1101/2023.06.15.545107v1" class="footer-link">Our article</a>
           <div class="footer-link-wrapper w-clearfix"><img src="../static/images/social-33.svg" width="20" alt=""
               class="info-icon">
             <a href="https://github.com/IndigoFloyd/SoybeanWebsite" class="footer-link with-icon">GitHub</a>
@@ -400,7 +399,7 @@
     <div class="w-container">
       <div class="footer-text">CopyRight © 2020 ~ 2021 National Key Laboratory of Crop Genetic Improvement, Huazhong
         Agricultural University<br></div><img src="../static/images/-nre42yj30rlfcjd7-001.png" loading="lazy"
-        width="100" sizes="100px"
+        width="100" sizes="99.99609375px"
         srcset="../static/images/-nre42yj30rlfcjd7-001-p-500.png 500w, ../static/images/-nre42yj30rlfcjd7-001.png 770w"
         alt="" class="image">
     </div>
@@ -410,6 +409,7 @@
     crossorigin="anonymous"></script>
   <script src="../static/js/webflow.js" type="text/javascript"></script>
   <script src="../static/js/bootstrap.bundle.min.js"></script>
+
 </body>
 
 </html>
